cabal-version:      2.4
name:               chess-repl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         reubenharry@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  
        Chess
        Parser
        Evaluator
        Repl
        Scratch

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.3.0,
        text,
        mtl,
        aeson,
        megaparsec,
        haskeline,
        witch,
        bytestring,
        containers,
        pretty-simple,
        QuickCheck
    hs-source-dirs:   src
    default-extensions:
        OverloadedStrings
        LambdaCase

    default-language: GHC2021

executable chess-repl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        chess-repl

    hs-source-dirs:   app
    default-language: GHC2021

executable doctests

  main-is: docs/docs/packages/megaparsec.lhs
  main-is: docs/docs/packages/lens.lhs
  main-is: docs/docs/packages/quickcheck.lhs
  main-is: docs/docs/packages/mtl.lhs
  main-is: docs/docs/packages/recursion-schemes.lhs
  build-depends:  
    base, 
    megaparsec,
    data-fix,
    text,
    lens,
    mtl,
    recursion-schemes,
    containers,
    QuickCheck,
    markdown-unlit
  ghc-options:    -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
  default-language: GHC2021