name: RegistryProcessor
version: 0.1.0.1
synopsis: A processor for the OpenGL Registry
description: A tool for generating OpenGLRaw from the OpenGL Registry
license: BSD3
license-file: LICENSE
author: Sven Panne
maintainer: Sven Panne <svenpanne@gmail.com>
category: Graphics
build-type: Simple
extra-source-files:
  OpenGL-Registry/xml/gl.xml
  OpenGL-Registry/xml/registry.rnc
cabal-version: >=1.10

executable RegistryProcessor
  main-is: Main.hs
  other-modules: DeclarationParser ManPages MangledRegistry Registry
  build-depends:
    base       >= 4   && < 5,
    containers >= 0.3 && < 0.7,
    hxt        >= 9.3 && < 9.4,
    directory  >= 1.0 && < 1.4,
    filepath   >= 1.0 && < 1.5,
    pretty     >= 1.1 && < 1.2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
